refactor(platform): route communications metering through common usage contract (#203)