@@ -7,9 +7,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import net.citotech.cito.billing.usage.UsageGatewayService;
 import net.citotech.cito.communication.delivery.DeliveryLogRepository;
 import net.citotech.cito.communication.delivery.MessageDelivery;
+import net.citotech.cito.platform.kernel.PlatformUsageContract;
 import net.javacrumbs.shedlock.spring.annotation.SchedulerLock;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
@@ -18,21 +18,13 @@ import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 
 /**
- * Per-channel usage relay (track B5b): converts {@code SENT} {@code
- * communication_message_deliveries} (V53) rows into {@code billing_usage_events} (V40) via the
- * existing idempotent {@link UsageGatewayService} path, then marks the delivery row billed. It is
- * the Communication → Billing meter bridge of the ISO/domain plan: the billing engine needs no new
- * pricing or rating code, only a source of usage events, and this relay is that source for
- * SMS/EMAIL/WHATSAPP/USSD.
+ * Per-channel usage relay: converts sent communication deliveries into the common Cito usage
+ * contract, then marks the delivery row billed. Payments, communications, identity and vending
+ * therefore converge on one Billing/BaaS metering boundary rather than owning separate meters.
  *
- * <p>Watermark model: one {@code communication_usage_watermark} row per channel tracks the last
- * delivery id relayed. A ShedLock-guarded sweep moves each channel's watermark forward in bounded
- * batches (default 100 rows). The relay never re-emits a billed row — {@code
- * DeliveryLogRepository.sentSince} excludes {@code billed_flag='N'} — and {@link
- * UsageGatewayService#recordUsage} dedupes by {@code idempotencyKey} ({@code
- * comm:<channel>:<deliveryId>}), so concurrent/restarted sweeps are no-ops, not duplicates. A row
- * that fails to relay (e.g. the tenant resolver or meters are misconfigured) is left unbilled and
- * retried on the next sweep — never skipped, so an outage never silently drops a metered event.
+ * <p>The idempotency key ({@code comm:<channel>:<deliveryId>}) remains stable across retries. A row
+ * that cannot be metered stays unbilled and is retried; an outage never silently drops billable
+ * usage.
  */
 @Component
 @ConditionalOnProperty(
@@ -42,21 +34,20 @@ import org.springframework.stereotype.Component;
 public class CommunicationUsageRelay {
 
     private static final Logger logger = Logger.getLogger(CommunicationUsageRelay.class.getName());
-
     private static final int DEFAULT_BATCH_LIMIT = 100;
     private static final String IDEMPOTENCY_PREFIX = "comm:";
 
     private final NamedParameterJdbcTemplate jdbcTemplate;
     private final DeliveryLogRepository deliveryLogRepository;
-    private final UsageGatewayService usageGatewayService;
+    private final PlatformUsageContract usage;
 
     public CommunicationUsageRelay(
             NamedParameterJdbcTemplate jdbcTemplate,
             DeliveryLogRepository deliveryLogRepository,
-            UsageGatewayService usageGatewayService) {
+            PlatformUsageContract usage) {
         this.jdbcTemplate = jdbcTemplate;
         this.deliveryLogRepository = deliveryLogRepository;
-        this.usageGatewayService = usageGatewayService;
+        this.usage = usage;
     }
 
     @Scheduled(fixedDelayString = "${cpay.communication.usage.relay.fixed-delay-ms:30000}")
@@ -76,10 +67,6 @@ public class CommunicationUsageRelay {
         }
     }
 
-    /**
-     * Sweeps every registered channel once. Returns the total number of deliveries relayed. Package
-     * visible so tests can drive a sweep without the {@code @Scheduled} machinery.
-     */
     int relayDue(int limit) {
         int total = 0;
         for (String channel : registeredChannels()) {
@@ -94,9 +81,7 @@ public class CommunicationUsageRelay {
         while (true) {
             long before = watermark;
             List<MessageDelivery> batch = deliveryLogRepository.sentSince(channel, before, limit);
-            if (batch.isEmpty()) {
-                break;
-            }
+            if (batch.isEmpty()) break;
             for (MessageDelivery delivery : batch) {
                 if (relayOne(delivery)) {
                     relayed++;
@@ -106,12 +91,7 @@ public class CommunicationUsageRelay {
                     return relayed;
                 }
             }
-            // No progress across a full batch (every row failed to relay, e.g. the tenant
-            // resolver or meters are down) - stop instead of spinning on the same rows; the
-            // next sweep retries them.
-            if (watermark == before) {
-                break;
-            }
+            if (watermark == before) break;
         }
         saveWatermark(channel, watermark);
         return relayed;
@@ -119,10 +99,6 @@ public class CommunicationUsageRelay {
 
     private boolean relayOne(MessageDelivery delivery) {
         try {
-            // Platform alerts have no merchant billing tenant. Preserve their provider/delivery
-            // evidence
-            // with an explicit zero customer charge instead of handing merchant 0 to the billing
-            // engine.
             if (delivery.merchantId() == 0) {
                 deliveryLogRepository.markBilled(delivery.id());
                 return true;
@@ -132,7 +108,7 @@ public class CommunicationUsageRelay {
             if (delivery.providerCode() != null && !delivery.providerCode().isBlank()) {
                 dimensions.put("provider_code", delivery.providerCode());
             }
-            usageGatewayService.recordUsage(
+            usage.recordUsage(
                     delivery.merchantId(),
                     serviceCodeFor(delivery.channel()),
                     meterCodeFor(delivery.channel()),
@@ -164,11 +140,11 @@ public class CommunicationUsageRelay {
                                 .addValue("id", delivery.id())
                                 .addValue("merchant", delivery.merchantId()),
                         BigDecimal.class);
-        if (quantities.isEmpty())
-            return BigDecimal.ONE; // Legacy, unlinked single-message delivery.
+        if (quantities.isEmpty()) return BigDecimal.ONE;
         BigDecimal quantity = quantities.getFirst();
-        if (quantity == null || quantity.signum() <= 0 || quantity.stripTrailingZeros().scale() > 0)
+        if (quantity == null || quantity.signum() <= 0 || quantity.stripTrailingZeros().scale() > 0) {
             throw new IllegalStateException("SMS segment evidence is invalid");
+        }
         return quantity;
     }
 
@@ -182,11 +158,10 @@ public class CommunicationUsageRelay {
     private long watermarkFor(String channel) {
         List<Long> rows =
                 jdbcTemplate.query(
-                        "SELECT last_delivery_id FROM communication_usage_watermark"
-                                + " WHERE channel=:channel",
+                        "SELECT last_delivery_id FROM communication_usage_watermark WHERE channel=:channel",
                         new MapSqlParameterSource("channel", channel),
                         (rs, rowNum) -> rs.getLong("last_delivery_id"));
-        return rows.isEmpty() ? 0L : rows.get(0);
+        return rows.isEmpty() ? 0L : rows.getFirst();
     }
 
     private void saveWatermark(String channel, long lastDeliveryId) {
